[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_docs]
upload-dir = docs/build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = eblur-dust
description = A dust library
long_description = Contains a library of dust size distributions and extinction physics. Used mainly to calculate dust scattering halos in the X-ray.
author = Lia Corrales
author_email = lia@space.mit.edu
license = BSD
url = http://eblur.github.io/dust
edit_on_github = False
github_project = eblur/dust

[entry_points]
astropy-package-template-example = packagename.example_mod:main
